--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,6 @@
+@import url('https://unpkg.com/leaflet/dist/leaflet.css');
+
+
 @font-face{
     font-family: Poppins;
     src:url("../src//assets//fonts/Poppins-SemiBold.ttf")
